Bug:103417,103431
Merging from JUDASPRIEST to main.

Regression from the bug fix of 101585 where appointment name is truncated using AjxStringUtil.fitString method which is rendering the content to calculate its width. 

Fix: AjxStringUtil.htmlEncode method is called before calling AjxStringUtil.fitString method.

https://bugzilla.zimbra.com/show_bug.cgi?id=103417
https://bugzilla.zimbra.com/show_bug.cgi?id=103431

Copied from Perforce
 Change: 564318

--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -1556,37 +1556,3 @@
   overflow: hidden;
   text-overflow: ellipsis;
   width: 145px; }
-
-#conversejs #converse-roster, #conversejs .search-converse-contact {
-  margin-top: 0.25rem; }
-
-#conversejs .controlbox-pane {
-  padding-top: 0px; }
-
-#conversejs .chat-content {
-  padding-top: .5rem; }
-
-#conversejs .chat-event, #conversejs .chat-date, #conversejs .chat-info {
-  padding-top: 0.15rem; }
-
-#conversejs .chat-message {
-  padding-top: 0.15rem; }
-
-/*Adjust top padding so that content is vertically center aligned in minimized Buddy List header */
-#conversejs .toggle-controlbox {
-  padding-top: .7rem; }
-
-/*Vertical spacing between menu items in Presence menu*/
-#conversejs .xmpp-status-menu li a.online,
-#conversejs .xmpp-status-menu li a.away,
-#conversejs .xmpp-status-menu li a.dnd,
-#conversejs .xmpp-status-menu li a.offline {
-  line-height: 1.7rem; }
-
-/*Vertically align the presence icons and text in the Presence menu*/
-#conversejs .xmpp-status-menu li a span.icon-online,
-#conversejs .xmpp-status-menu li a span.icon-away,
-#conversejs .xmpp-status-menu li a span.icon-dnd,
-#conversejs .xmpp-status-menu li a span.icon-offline {
-  position: relative;
-  top: 0.14rem; }
