--- a/converse/converse.js-0.9.4/sass/zm_core.scss
+++ b/converse/converse.js-0.9.4/sass/zm_core.scss
@@ -226,44 +226,3 @@
         text-overflow: ellipsis;
         width: $chat-width - 55px;
 }
-
-#conversejs #converse-roster, #conversejs .search-converse-contact {
-    margin-top: 0.25rem;
-}
-
-#conversejs .controlbox-pane {    
-    padding-top: 0px;
-}
-
-#conversejs .chat-content {
-    padding-top: .5rem;
-}
-
-#conversejs .chat-event, #conversejs .chat-date, #conversejs .chat-info {
-	padding-top: $vertical-spacing-chat-window;
-}
-
-#conversejs .chat-message {
-    padding-top: $vertical-spacing-chat-window;
-}
-
-/*Adjust top padding so that content is vertically center aligned in minimized Buddy List header */
- #conversejs .toggle-controlbox {
-    padding-top: .7rem;
- }
- 
- /*Vertical spacing between menu items in Presence menu*/
-#conversejs .xmpp-status-menu li a.online, 
-#conversejs .xmpp-status-menu li a.away, 
-#conversejs .xmpp-status-menu li a.dnd, 
-#conversejs .xmpp-status-menu li a.offline{
-  line-height:1.7rem; }
-
-/*Vertically align the presence icons and text in the Presence menu*/  
-#conversejs .xmpp-status-menu li a span.icon-online,
-#conversejs .xmpp-status-menu li a span.icon-away,
-#conversejs .xmpp-status-menu li a span.icon-dnd,
-#conversejs .xmpp-status-menu li a span.icon-offline{
-  position: relative;
-  top: 0.14rem;
-}
